--- a/index.html
+++ b/index.html
@@ -181,70 +181,46 @@ document.addEventListener("DOMContentLoaded", () => {
     5:{steps:["<b>1.</b> Erkennen, welche Regel passt:","   gleiche → +","   verschiedene → −","<b>2.</b> Passendes Verfahren anwenden"],example:"(2x + 1)(x − 4) = 2x² − 7x − 4"}
   };
 
-  function checkAnswer(){
-    const input=answerEl.value.trim();
-    if(!input){resultEl.style.color="#555";resultEl.innerText="Bitte gib eine Lösung ein.";return;}
-    answerEl.blur();
-
-    if(normMul(input)===normMul(correctSolution)){
-      resultEl.style.color="green";
-      if(firstTry){resultEl.innerText="✅ Richtig! (+1 Punkt)";score++;}
-      else{resultEl.innerText="✅ Richtig – aber kein Punkt mehr";}
-      firstTry=false;round++;updateProgress();
-      scoreEl.innerText=`Aufgabe ${Math.min(round,totalRounds)} von ${totalRounds} – Punkte: ${score}`;
-    }else{
-      const exp=explanations[level];
-      let html=`<span style="color:#d00;">❌ Falsch!</span> Richtige Lösung: <b>${correctSolution}</b><br>`;
-      if(exp){
-        html+=`<details open><summary style="color:#007bff;cursor:pointer;">🧩 Lösungsweg anzeigen</summary>`;
-        html+=`<div style="text-align:left;max-width:420px;margin:6px auto;font-size:0.95em;line-height:1.4;color:#000;">`;
-        html+=exp.steps.map(s=>`<div>${s}</div>`).join("");
-        html+=`<div style="margin-top:6px;font-style:italic;">Beispiel: ${exp.example}</div></div></details>`;
-      }
-      resultEl.innerHTML=html;firstTry=false;
-    }
-  }
-
-
   function updateProgress(){ progressBar.style.width = ((round-1)/totalRounds*100) + "%"; }
 
   function nextLevel(){
-    if(score>=8 && level<4){level++;alert(`🎯 Level ${level-1} geschafft! Weiter mit ${LEVEL_NAMES[level-1]}.`);}
-    else if(score>=8 && level===4){level=5;alert("🏆 Alle Level geschafft! Jetzt kommt das gemischte Level.");}
-    else{alert(`Level ${level} beendet mit ${score}/${totalRounds} Punkten. Versuch es nochmal!`);}
-    round=1;score=0;newTask();
+    if(score>=8 && level<4){ level++; alert(`🎯 Level ${level-1} geschafft! Weiter mit ${LEVEL_NAMES[level-1]}.`);}
+    else if(score>=8 && level===4){ level=5; alert("🏆 Alle Level geschafft! Jetzt kommt das gemischte Level.");}
+    else{ alert(`Level ${level} beendet mit ${score}/${totalRounds} Punkten. Versuch es nochmal!`);}
+    round=1; score=0; newTask();
   }
 
   function newTask(){
-    resultEl.innerText="";answerEl.value="";firstTry=true;
-    levelDisplay.innerText=aufgabe;
+    resultEl.innerText=""; answerEl.value=""; firstTry=true;
+    levelDisplay.innerText = LEVEL_NAMES[level-1];   // Levelanzeige nur oben
     if(round>totalRounds){
       resultEl.style.color="green";
       resultEl.innerHTML=`🎉 Level fertig!<br>Endstand: ${score}/${totalRounds}`;
-      nextLevel();return;
+      nextLevel(); return;
     }
     let aufgabe;
     switch(level){
-      case 1:aufgabe=createIntTask();break;
-      case 2:aufgabe=createSimpleTask();break;
-      case 3:aufgabe=createMonomBinom();break;
-      case 4:aufgabe=Math.random()<0.5?createGeneralBinom():createPlusMinusBinom();break;
-      case 5:aufgabe=randomChoice([createIntTask,createSimpleTask,createMonomBinom,createGeneralBinom,createPlusMinusBinom])();break;
+      case 1: aufgabe=createIntTask(); break;
+      case 2: aufgabe=createSimpleTask(); break;
+      case 3: aufgabe=createMonomBinom(); break;
+      case 4: aufgabe=Math.random()<0.5?createGeneralBinom():createPlusMinusBinom(); break;
+      case 5: aufgabe=randomChoice([createIntTask,createSimpleTask,createMonomBinom,createGeneralBinom,createPlusMinusBinom])(); break;
     }
-    taskEl.innerText=`${LEVEL_NAMES[level-1]}\n${aufgabe}`;
-    scoreEl.innerText=`Aufgabe ${round} von ${totalRounds} – Punkte: ${score}`;
+    taskEl.innerText = aufgabe;  // ✅ keine Levelangabe mehr im Aufgabenblock
+    scoreEl.innerText = `Aufgabe ${round} von ${totalRounds} – Punkte: ${score}`;
     updateProgress();
   }
 
   function checkAnswer(){
     const input=answerEl.value.trim();
-    if(!input){resultEl.style.color="#555";resultEl.innerText="Bitte gib eine Lösung ein.";return;}
+    if(!input){ resultEl.style.color="#555"; resultEl.innerText="Bitte gib eine Lösung ein."; return; }
     answerEl.blur();
+
     if(normMul(input)===normMul(correctSolution)){
       resultEl.style.color="green";
-      if(firstTry){resultEl.innerText="✅ Richtig! (+1 Punkt)";score++;}
-      else{resultEl.innerText="✅ Richtig – aber kein Punkt mehr";}
-      firstTry=false;round++;updateProgress();
+      if(firstTry){ resultEl.innerText="✅ Richtig! (+1 Punkt)"; score++; }
+      else{ resultEl.innerText="✅ Richtig – aber kein Punkt mehr"; }
+      firstTry=false; round++; updateProgress();
       scoreEl.innerText=`Aufgabe ${Math.min(round,totalRounds)} von ${totalRounds} – Punkte: ${score}`;
     }else{
       const exp=explanations[level];
@@ -252,17 +228,17 @@ document.addEventListener("DOMContentLoaded", () => {
       if(exp){
         html+=`<details open><summary style="color:#007bff;cursor:pointer;">🧩 Lösungsweg anzeigen</summary>`;
         html+=`<div style="text-align:left;max-width:420px;margin:6px auto;font-size:0.95em;line-height:1.4;color:#000;">`;
-        html+=`<div style="font-weight:600;margin-bottom:4px;">${exp.title}</div>`;
         html+=exp.steps.map(s=>`<div>${s}</div>`).join("");
         html+=`<div style="margin-top:6px;font-style:italic;">Beispiel: ${exp.example}</div></div></details>`;
       }
-      resultEl.innerHTML=html;firstTry=false;
+      resultEl.innerHTML=html; firstTry=false;
     }
   }
 
   checkBtn.addEventListener("click",checkAnswer);
   newBtn.addEventListener("click",newTask);
-  answerEl.addEventListener("keydown",e=>{if(e.key==="Enter")checkAnswer();});
+  answerEl.addEventListener("keydown",e=>{ if(e.key==="Enter")checkAnswer(); });
+
   newTask();
 });
 </script>
