--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@ document.addEventListener("DOMContentLoaded", () => {
   const levelDisplay = document.getElementById("levelDisplay");
   const progressBar = document.getElementById("progressBar");
 
-  // Zufallsfunktionen
   const COEFFS=[2,3,4,5,6,7,8,9];
   const VARS=['a','b','m','n','p','q','x','y'];
   const randomChoice=a=>a[Math.floor(Math.random()*a.length)];
@@ -89,16 +88,24 @@ document.addEventListener("DOMContentLoaded", () => {
     "Level 5: Gemischt"
   ];
 
-  // --- Aufgabenfunktionen ---
+  // ---------- Aufgaben ----------
   function createIntTask(){
     const count=Math.random()<0.5?2:3;
     let nums=[], res=1;
     for(let i=0;i<count;i++){
-      const n=Math.floor(Math.random()*11)-5||1;
+      const max = (count===3)?5:9;
+      let n=Math.floor(Math.random()*(max*2+1))-max;
+      if(n===0) n=1;
       nums.push(n); res*=n;
     }
     correctSolution=String(res);
-    return nums.map(n=>`(${n})`).join(" · ")+" = ?";
+    // ¾ der Fälle mit (+n), sonst ohne
+    return nums.map(n=>{
+      const plusForm=Math.random()<0.75;
+      if(n>0 && plusForm) return `(+${n})`;
+      if(n<0) return `(${n})`;
+      return `${n}`;
+    }).join(" · ")+" = ?";
   }
 
   function createSimpleTask(){
@@ -107,9 +114,15 @@ document.addEventListener("DOMContentLoaded", () => {
     let text="";
     for(let i=0;i<count;i++){
       const s=randomSign()==='-'?-1:1;
-      const n=randomCoeff(),v=randomVar();
-      coeff*=s*n; vars.push(v);
-      text+=`(${s===-1?'-':''}${n}${v}) · `;
+      const max = (count===3)?3:9;
+      const n=randomChoice([...Array(max).keys()].map(x=>x+1)); // 1..max
+      const hasVar=(count===3)?(Math.random()<0.66):(true);
+      const v=hasVar?randomVar():"";
+      coeff*=s*n;
+      if(hasVar) vars.push(v);
+      const plusForm=(n>0 && Math.random()<0.75);
+      const inner=(plusForm && s===1)?`(+${n}${v})`:`(${s===-1?'-':''}${n}${v})`;
+      text+=inner+" · ";
     }
     text=text.slice(0,-3);
     vars.sort();
@@ -172,55 +185,81 @@ document.addEventListener("DOMContentLoaded", () => {
     return `(${a}${v} + ${b}) · (${a}${v} - ${b}) = ?`;
   }
 
-  // --- Lösungswege (ohne Kapitel, mit fetten Schrittzahlen) ---
+  // ---------- Lösungswege ----------
   const explanations = {
-    1:{steps:["<b>1.</b> Vorzeichen bestimmen:","   gleiche Vorzeichen → +","   verschiedene Vorzeichen → −","<b>2.</b> Zahlen multiplizieren"],example:"(−3) · (−2) = +6"},
-    2:{steps:["<b>1.</b> Vorzeichen bestimmen:","   gleiche Vorzeichen → +","   verschiedene Vorzeichen → −","<b>2.</b> Zahlen multiplizieren und Variablen anhängen (x·x = x²)"],example:"(−3x) · (2x) = −6x²"},
-    3:{steps:["<b>1.</b> Vorzeichen beachten:","   gleiche → +","   verschiedene → −","<b>2.</b> Monom mit jedem Glied der Klammer multiplizieren"],example:"3x · (x + 2) = 3x² + 6x"},
-    4:{steps:["<b>1.</b> Vorzeichen beachten:","   gleiche → +","   verschiedene → −","<b>2.</b> Jeden Term der ersten Klammer mit jedem der zweiten multiplizieren"],example:"(x + 2)(x + 3) = x² + 5x + 6"},
-    5:{steps:["<b>1.</b> Erkennen, welche Regel passt:","   gleiche → +","   verschiedene → −","<b>2.</b> Passendes Verfahren anwenden"],example:"(2x + 1)(x − 4) = 2x² − 7x − 4"}
+    1:{steps:[
+        "<b>1. Vorzeichen bestimmen:</b>",
+        "   gleiche Vorzeichen → +",
+        "   verschiedene Vorzeichen → −",
+        "<b>2. Zahlen multiplizieren</b>"
+      ],example:"(−3) · (−2) = +6"},
+    2:{steps:[
+        "<b>1. Vorzeichen bestimmen:</b>",
+        "   gleiche Vorzeichen → +",
+        "   verschiedene Vorzeichen → −",
+        "<b>2. Zahlen multiplizieren</b>",
+        "<b>3. Variablen anhängen (x·x = x²)</b>"
+      ],example:"(−3x) · (2x) = −6x²"},
+    3:{steps:[
+        "<b>1. Vorzeichen beachten:</b>",
+        "   gleiche → +",
+        "   verschiedene → −",
+        "<b>2. Monom mit jedem Glied der Klammer multiplizieren</b>"
+      ],example:"3x · (x + 2) = 3x² + 6x"},
+    4:{steps:[
+        "<b>1. Vorzeichen beachten:</b>",
+        "   gleiche → +",
+        "   verschiedene → −",
+        "<b>2. Jeden Term der ersten Klammer mit jedem der zweiten multiplizieren</b>"
+      ],example:"(x + 2)(x + 3) = x² + 5x + 6"},
+    5:{steps:[
+        "<b>1. Erkennen, welche Regel passt:</b>",
+        "   gleiche → +",
+        "   verschiedene → −",
+        "<b>2. Passendes Verfahren anwenden</b>"
+      ],example:"(2x + 1)(x − 4) = 2x² − 7x − 4"}
   };
 
-  function updateProgress(){ progressBar.style.width = ((round-1)/totalRounds*100) + "%"; }
+  // ---------- Fortschritt, Level & Anzeige ----------
+  function updateProgress(){ progressBar.style.width=((round-1)/totalRounds*100)+"%"; }
 
   function nextLevel(){
-    if(score>=8 && level<4){ level++; alert(`🎯 Level ${level-1} geschafft! Weiter mit ${LEVEL_NAMES[level-1]}.`);}
-    else if(score>=8 && level===4){ level=5; alert("🏆 Alle Level geschafft! Jetzt kommt das gemischte Level.");}
-    else{ alert(`Level ${level} beendet mit ${score}/${totalRounds} Punkten. Versuch es nochmal!`);}
-    round=1; score=0; newTask();
+    if(score>=8 && level<4){level++;alert(`🎯 Level ${level-1} geschafft! Weiter mit ${LEVEL_NAMES[level-1]}.`);}
+    else if(score>=8 && level===4){level=5;alert("🏆 Alle Level geschafft! Jetzt kommt das gemischte Level.");}
+    else{alert(`Level ${level} beendet mit ${score}/${totalRounds} Punkten. Versuch es nochmal!`);}
+    round=1;score=0;newTask();
   }
 
   function newTask(){
-    resultEl.innerText=""; answerEl.value=""; firstTry=true;
-    levelDisplay.innerText = LEVEL_NAMES[level-1];   // Levelanzeige nur oben
+    resultEl.innerText="";answerEl.value="";firstTry=true;
+    levelDisplay.innerText=LEVEL_NAMES[level-1];
     if(round>totalRounds){
       resultEl.style.color="green";
       resultEl.innerHTML=`🎉 Level fertig!<br>Endstand: ${score}/${totalRounds}`;
-      nextLevel(); return;
+      nextLevel();return;
     }
     let aufgabe;
     switch(level){
-      case 1: aufgabe=createIntTask(); break;
-      case 2: aufgabe=createSimpleTask(); break;
-      case 3: aufgabe=createMonomBinom(); break;
-      case 4: aufgabe=Math.random()<0.5?createGeneralBinom():createPlusMinusBinom(); break;
-      case 5: aufgabe=randomChoice([createIntTask,createSimpleTask,createMonomBinom,createGeneralBinom,createPlusMinusBinom])(); break;
+      case 1: aufgabe=createIntTask();break;
+      case 2: aufgabe=createSimpleTask();break;
+      case 3: aufgabe=createMonomBinom();break;
+      case 4: aufgabe=Math.random()<0.5?createGeneralBinom():createPlusMinusBinom();break;
+      case 5: aufgabe=randomChoice([createIntTask,createSimpleTask,createMonomBinom,createGeneralBinom,createPlusMinusBinom])();break;
     }
-    taskEl.innerText = aufgabe;  // ✅ keine Levelangabe mehr im Aufgabenblock
-    scoreEl.innerText = `Aufgabe ${round} von ${totalRounds} – Punkte: ${score}`;
+    taskEl.innerText=aufgabe;
+    scoreEl.innerText=`Aufgabe ${round} von ${totalRounds} – Punkte: ${score}`;
     updateProgress();
   }
 
   function checkAnswer(){
     const input=answerEl.value.trim();
-    if(!input){ resultEl.style.color="#555"; resultEl.innerText="Bitte gib eine Lösung ein."; return; }
+    if(!input){resultEl.style.color="#555";resultEl.innerText="Bitte gib eine Lösung ein.";return;}
     answerEl.blur();
-
     if(normMul(input)===normMul(correctSolution)){
       resultEl.style.color="green";
-      if(firstTry){ resultEl.innerText="✅ Richtig! (+1 Punkt)"; score++; }
-      else{ resultEl.innerText="✅ Richtig – aber kein Punkt mehr"; }
-      firstTry=false; round++; updateProgress();
+      if(firstTry){resultEl.innerText="✅ Richtig! (+1 Punkt)";score++;}
+      else{resultEl.innerText="✅ Richtig – aber kein Punkt mehr";}
+      firstTry=false;round++;updateProgress();
       scoreEl.innerText=`Aufgabe ${Math.min(round,totalRounds)} von ${totalRounds} – Punkte: ${score}`;
     }else{
       const exp=explanations[level];
@@ -231,14 +270,13 @@ document.addEventListener("DOMContentLoaded", () => {
         html+=exp.steps.map(s=>`<div>${s}</div>`).join("");
         html+=`<div style="margin-top:6px;font-style:italic;">Beispiel: ${exp.example}</div></div></details>`;
       }
-      resultEl.innerHTML=html; firstTry=false;
+      resultEl.innerHTML=html;firstTry=false;
     }
   }
 
   checkBtn.addEventListener("click",checkAnswer);
   newBtn.addEventListener("click",newTask);
-  answerEl.addEventListener("keydown",e=>{ if(e.key==="Enter")checkAnswer(); });
-
+  answerEl.addEventListener("keydown",e=>{if(e.key==="Enter")checkAnswer();});
   newTask();
 });
 </script>
