--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
     width:80%; max-width:400px; height:20px;
     background-color:#ddd; border-radius:10px;
     margin:10px auto 20px; overflow:hidden;
+    display:flex;
   }
-  #progressBar {
-    height:100%; width:0%; background-color:#4caf50;
-    transition:width 0.3s ease, background-color 0.3s ease;
+  .progress-segment {
+    height:100%;
+    flex:1;
+    transition:background-color 0.3s ease;
   }
   input {
     padding:10px; font-size:1.2em; width:80%; max-width:300px;
@@ -45,7 +47,7 @@
 <h1>Termtrainer – Multiplikation</h1>
 <div id="levelDisplay">Level 1: Ganze Zahlen</div>
 <div id="score">Lade...</div>
-<div id="progressContainer"><div id="progressBar"></div></div>
+<div id="progressContainer"></div>
 <div id="task">...</div>
 <input type="text" id="answer" placeholder="Deine Lösung" autocomplete="off" spellcheck="false"><br>
 <button id="checkBtn">Prüfen</button>
@@ -66,7 +68,7 @@ document.addEventListener("DOMContentLoaded", () => {
   const resultEl = document.getElementById("result");
   const scoreEl = document.getElementById("score");
   const levelDisplay = document.getElementById("levelDisplay");
-  const progressBar = document.getElementById("progressBar");
+  const progressContainer = document.getElementById("progressContainer");
 
   const COEFFS=[2,3,4,5,6,7,8,9];
   const VARS=['a','b','m','n','p','q','x','y'];
@@ -77,7 +79,7 @@ document.addEventListener("DOMContentLoaded", () => {
   const formatCoeff=(n,isVar)=>{if(!isVar)return String(n);if(n===1)return"";if(n===-1)return"-";return String(n);};
   const normMul=s=>s.replace(/\s+/g,'').replace(/^(\+)?/,'').replace(/²/g,'^2').replace(/³/g,'^3').replace(/−/g,'-').toLowerCase();
 
-  // Alphabetische Sortierung der Variablen (mit Exponenten)
+  // Alphabetische Sortierung
   function sortVars(term) {
     const parts = [...term.matchAll(/([a-z])(\^?\d?|[²³]?)/g)].map(m => [m[1], m[2] || ""]);
     parts.sort((a,b) => a[0].localeCompare(b[0]));
@@ -85,6 +87,19 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 
   let level=1, correctSolution="", round=1, score=0, totalRounds=10, firstTry=true;
+  const segments=[];
+
+  // Fortschrittsbalken initialisieren
+  function initProgressBar(){
+    progressContainer.innerHTML="";
+    for(let i=0;i<totalRounds;i++){
+      const seg=document.createElement("div");
+      seg.className="progress-segment";
+      seg.style.backgroundColor="#ddd";
+      progressContainer.appendChild(seg);
+      segments.push(seg);
+    }
+  }
 
   const LEVEL_NAMES=[
     "Level 1: Ganze Zahlen",
@@ -94,7 +109,7 @@ document.addEventListener("DOMContentLoaded", () => {
     "Level 5: Gemischt"
   ];
 
-  // ---------- Aufgaben ----------
+  // Aufgaben
   function createIntTask(){
     const count=Math.random()<0.5?2:3;
     let nums=[], res=1;
@@ -195,7 +210,7 @@ document.addEventListener("DOMContentLoaded", () => {
     return `(${a}${v} + ${b}) · (${a}${v} - ${b}) = ?`;
   }
 
-  // ---------- Lösungswege ----------
+  // Lösungswege
   const explanations = {
     1:{steps:[
         "<b>1. Vorzeichen bestimmen:</b>",
@@ -236,16 +251,11 @@ document.addEventListener("DOMContentLoaded", () => {
       ],example:"(2x + 1)(x − 4) = 2x² − 7x − 4"}
   };
 
-  // ---------- Fortschritt ----------
-  function updateProgress(){
-    progressBar.style.width=((round-1)/totalRounds*100)+"%";
-  }
-
   function nextLevel(){
     if(score>=8 && level<4){level++;alert(`🎯 Level ${level-1} geschafft! Weiter mit ${LEVEL_NAMES[level-1]}.`);}
     else if(score>=8 && level===4){level=5;alert("🏆 Alle Level geschafft! Jetzt kommt das gemischte Level.");}
     else{alert(`Level ${level} beendet mit ${score}/${totalRounds} Punkten. Versuch es nochmal!`);}
-    round=1;score=0;newTask();
+    round=1;score=0;segments.forEach(s=>s.style.backgroundColor="#ddd");newTask();
   }
 
   function newTask(){
@@ -266,23 +276,20 @@ document.addEventListener("DOMContentLoaded", () => {
     }
     taskEl.innerText=aufgabe;
     scoreEl.innerText=`Aufgabe ${round} von ${totalRounds} – Punkte: ${score}`;
-    updateProgress();
-    progressBar.style.backgroundColor="#4caf50";
   }
 
   function checkAnswer(){
     const input=answerEl.value.trim();
     if(!input){resultEl.style.color="#555";resultEl.innerText="Bitte gib eine Lösung ein.";return;}
     answerEl.blur();
+
     if(normMul(input)===normMul(correctSolution)){
-      progressBar.style.backgroundColor="#4caf50";
       resultEl.style.color="green";
-      if(firstTry){resultEl.innerText="✅ Richtig! (+1 Punkt)";score++;}
-      else{resultEl.innerText="✅ Richtig – aber kein Punkt mehr";}
-      firstTry=false;round++;updateProgress();
-      scoreEl.innerText=`Aufgabe ${Math.min(round,totalRounds)} von ${totalRounds} – Punkte: ${score}`;
+      if(firstTry){resultEl.innerText="✅ Richtig! (+1 Punkt)";score++;segments[round-1].style.backgroundColor="#4caf50";}
+      else{resultEl.innerText="✅ Richtig – aber kein Punkt mehr";segments[round-1].style.backgroundColor="#4caf50";}
     }else{
-      progressBar.style.backgroundColor="#d9534f";
+      resultEl.style.color="#000";
+      segments[round-1].style.backgroundColor="#d9534f"; // nur Segment rot färben
       const exp=explanations[level];
       let html=`<span style="color:#d00;">❌ Falsch!</span> Richtige Lösung: <b>${correctSolution}</b><br>`;
       if(exp){
@@ -291,13 +298,17 @@ document.addEventListener("DOMContentLoaded", () => {
         html+=exp.steps.map(s=>`<div>${s}</div>`).join("");
         html+=`<div style="margin-top:6px;font-style:italic;">Beispiel: ${exp.example}</div></div></details>`;
       }
-      resultEl.innerHTML=html;firstTry=false;
+      resultEl.innerHTML=html;
     }
+    firstTry=false;
+    round++;
+    scoreEl.innerText=`Aufgabe ${Math.min(round,totalRounds)} von ${totalRounds} – Punkte: ${score}`;
   }
 
   checkBtn.addEventListener("click",checkAnswer);
   newBtn.addEventListener("click",newTask);
   answerEl.addEventListener("keydown",e=>{if(e.key==="Enter")checkAnswer();});
+  initProgressBar();
   newTask();
 });
 </script>
