--- a/index.html
+++ b/index.html
@@ -130,51 +130,87 @@ document.addEventListener("DOMContentLoaded", () => {
     }).join(" · ")+" = ?";
   }
 
-  function createSimpleTask(){
-    const count=Math.random()<0.5?2:3;
-    let coeff=1,vars=[];
-    let text="";
-    for(let i=0;i<count;i++){
-      const s=randomSign()==='-'?-1:1;
-      const max=(count===3)?3:9;
-      const n=randomChoice([...Array(max).keys()].map(x=>x+1));
-      const hasVar=(count===3)?(Math.random()<0.66):true;
-      const v=hasVar?randomVar():"";
-      coeff*=s*n;
-      if(hasVar)vars.push(v);
-      const plusForm=(n>0 && Math.random()<0.75);
-      const inner=(plusForm && s===1)?`(+${n}${v})`:`(${s===-1?'-':''}${n}${v})`;
-      text+=inner+" · ";
-    }
-    text=text.slice(0,-3);
-    vars.sort();
-    const varCount={};
-    for(const v of vars)varCount[v]=(varCount[v]||0)+1;
-    let varsPart="";
-    for(const [v,exp] of Object.entries(varCount))
-      varsPart+=v+(exp>1?(exp===2?'²':'³'):'');
-    varsPart=sortVars(varsPart);
-    correctSolution=`${formatCoeff(coeff,true)}${varsPart}`;
-    return `${text} = ?`;
+function createSimpleTask(){
+  const count = Math.random() < 0.5 ? 2 : 3;
+  let coeff = 1, vars = [];
+  let text = "";
+
+  // In etwa 1/3 der Fälle sollen gleiche Variablen verwendet werden
+  const sameVarChance = Math.random() < 0.33;
+  const baseVar = randomVar();
+
+  for (let i = 0; i < count; i++) {
+    const s = randomSign() === '-' ? -1 : 1;
+    const max = (count === 3) ? 3 : 9;
+    const n = randomChoice([...Array(max).keys()].map(x => x + 1));
+
+    // Entscheide, ob gleiche oder verschiedene Variable
+    const hasVar = (count === 3) ? (Math.random() < 0.66) : true;
+    const v = hasVar ? (sameVarChance ? baseVar : randomVar()) : "";
+
+    coeff *= s * n;
+    if (hasVar) vars.push(v);
+
+    const plusForm = (n > 0 && Math.random() < 0.75);
+    const inner = (plusForm && s === 1) ? `(+${n}${v})` : `(${s === -1 ? '-' : ''}${n}${v})`;
+    text += inner + " · ";
   }
 
-  function createMonomBinom(){
-    const coeff=randomCoeff()*(Math.random()<0.5?-1:1);
-    const v1=randomVar();
-    const exp1=Math.floor(Math.random()*3)+1;
-    const monom=`${formatCoeff(coeff,true)}${v1}${exp1>1?(exp1===2?'²':'³'):''}`;
-    const v2=randomVar();
-    const b1=randomCoeff()*(Math.random()<0.5?-1:1);
-    const b2=randomCoeff()*(Math.random()<0.5?-1:1);
-    const binom=`(${b1>=0?'+':''}${b1}${v2} ${b2>=0?'+':'-'} ${Math.abs(b2)})`;
-    const expPart=exp1>1?(exp1===2?'²':'³'):'';
-    let vars1=sortVars(v1+expPart+v2);
-    let vars2=sortVars(v1+expPart);
-    const term1=`${coeff*b1}${vars1}`;
-    const term2=`${coeff*b2}${vars2}`;
-    correctSolution=`${term1.startsWith('-')?'':'+'}${term1} ${term2.startsWith('-')?'':'+'} ${term2}`.replace(/\+\s*-/g,'- ').replace(/^\+\s*/,'');
-    return `${monom} · ${binom} = ?`;
+  text = text.slice(0, -3);
+
+  // Variablen zählen
+  vars.sort();
+  const varCount = {};
+  for (const v of vars) varCount[v] = (varCount[v] || 0) + 1;
+
+  let varsPart = "";
+  for (const [v, exp] of Object.entries(varCount))
+    varsPart += v + (exp > 1 ? (exp === 2 ? '²' : '³') : '');
+  varsPart = sortVars(varsPart);
+
+  correctSolution = `${formatCoeff(coeff, true)}${varsPart}`;
+  return `${text} = ?`;
+}
+
+
+ function createMonomBinom() {
+  const coeff = randomCoeff() * (Math.random() < 0.5 ? -1 : 1);
+  const v1 = randomVar();
+  const exp1 = Math.floor(Math.random() * 3) + 1; // Hoch 1–3
+  const monom = `${formatCoeff(coeff, true)}${v1}${exp1 > 1 ? (exp1 === 2 ? '²' : '³') : ''}`;
+
+  // Jetzt sicherstellen: keine Hochzahl über 3 entsteht!
+  // Wenn Monom z. B. m³, dann darf Binom KEIN 'm'-Term enthalten.
+  let v2 = randomVar();
+  if (v2 === v1 && exp1 >= 2) {
+    // Wähle anderes Variablenzeichen
+    do { v2 = randomVar(); } while (v2 === v1);
   }
+
+  const b1 = randomCoeff() * (Math.random() < 0.5 ? -1 : 1);
+  const b2 = randomCoeff() * (Math.random() < 0.5 ? -1 : 1);
+
+  const binom = `(${b1 >= 0 ? '+':''}${b1}${v2} ${b2 >= 0 ? '+':'-'} ${Math.abs(b2)})`;
+
+  // Lösung
+  const expPart = exp1 > 1 ? (exp1 === 2 ? '²' : '³') : '';
+  let vars1 = sortVars(v1 + expPart + v2);
+  let vars2 = sortVars(v1 + expPart);
+
+  // prüfen, ob m⁴ oder höher entstehen würde → falls ja, abbrechen und neu erstellen
+  if (vars1.includes(v1 + '⁴') || vars1.includes(v1 + '^4')) {
+    return createMonomBinom(); // neu generieren
+  }
+
+  const term1 = `${coeff * b1}${vars1}`;
+  const term2 = `${coeff * b2}${vars2}`;
+  correctSolution = `${term1.startsWith('-') ? '' : '+'}${term1} ${term2.startsWith('-') ? '' : '+'} ${term2}`
+    .replace(/\+\s*-/g, '- ')
+    .replace(/^\+\s*/, '');
+
+  return `${monom} · ${binom} = ?`;
+}
+
 
   function createGeneralBinom(){
     let v1=randomVar(),v2=randomVar();
