--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ function createSimpleTask(){
   // Lösungswege
   const explanations = {
     1:{steps:["<b>1. Vorzeichen bestimmen:</b>","   gleiche Vorzeichen → +","   verschiedene Vorzeichen → −","<b>2. Zahlen multiplizieren</b>"],
-      example:`(−3) · (−2) = +6<br><b>Beispiel mit 3 Faktoren:</b><br>(−2) · (−4) · (3)<br>= (+8) · (3)<br>= +24`},
+      example:`3 · 2 = 6<br><b>Beispiel mit 3 Faktoren:</b><br>(−2) · (−4) · (3)<br>= (+8) · (3)<br>= +24`},
     2:{steps:["<b>1. Vorzeichen bestimmen:</b>","   gleiche Vorzeichen → +","   verschiedene Vorzeichen → −","<b>2. Zahlen multiplizieren</b>","<b>3. Variablen anhängen (x·x = x²)</b>"],
       example:"(−3x) · (2x) = −6x²"},
     3:{steps:["<b>1. Vorzeichen beachten:</b>","   gleiche → +","   verschiedene → −","<b>2. Monom mit jedem Glied der Klammer multiplizieren</b>"],
